# focusa

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.beads/: issues.jsonl
crates/focusa-api/: Cargo.toml
crates/focusa-api/src/: main.rs  server.rs
crates/focusa-api/src/middleware/: auth.rs  error_envelope.rs  mod.rs
crates/focusa-api/src/routes/: ascc.rs  attachments.rs  autonomy.rs  awareness.rs  capabilities.rs  capabilities_extra.rs  clt.rs  commands.rs  constitution.rs  ecs.rs  env.rs  events.rs  events_sqlite.rs  events_stream.rs  focus.rs  gate.rs  health.rs  info.rs  instances.rs  memory.rs  metacognition.rs  mod.rs  ontology.rs  permissions.rs  predictions.rs  proposals.rs  proxy.rs  reflection.rs  rfm.rs  session.rs  skills.rs  snapshots.rs  sse.rs  sync.rs  sync_receive.rs  sync_transfer.rs  telemetry.rs  threads.rs  tokens.rs  training.rs  (+6 more)
crates/focusa-cli/: Cargo.toml
crates/focusa-cli/src/: api_client.rs  main.rs
crates/focusa-cli/src/commands/: autonomy.rs  awareness.rs  cache.rs  cleanup.rs  clt.rs  constitution.rs  continue_work.rs  contribute.rs  daemon.rs  debug.rs  doctor.rs  ecs.rs  env.rs  export.rs  focus.rs  gate.rs  lineage.rs  memory.rs  metacognition.rs  mod.rs  ontology.rs  predict.rs  proposals.rs  reflection.rs  release.rs  rfm.rs  skills.rs  telemetry.rs  threads.rs  tokens.rs  turns.rs  workpoint.rs  wrap.rs
crates/focusa-core/: Cargo.toml
crates/focusa-core/src/: ascc.rs  lib.rs  reducer.rs  types.rs
crates/focusa-core/src/adapters/: acp.rs  anthropic.rs  letta.rs  mod.rs  openai.rs  passthrough.rs
crates/focusa-core/src/autonomy/: mod.rs
crates/focusa-core/src/cache/: mod.rs
crates/focusa-core/src/clt/: mod.rs
crates/focusa-core/src/constitution/: mod.rs
crates/focusa-core/src/expression/: budget.rs  engine.rs  mod.rs  serializer.rs
crates/focusa-core/src/focus/: frame.rs  mod.rs  stack.rs  state.rs
crates/focusa-core/src/gate/: candidates.rs  focus_gate.rs  mod.rs
crates/focusa-core/src/intuition/: aggregation.rs  engine.rs  mod.rs  signals.rs
crates/focusa-core/src/memory/: mod.rs  procedural.rs  semantic.rs
crates/focusa-core/src/permissions/: mod.rs
crates/focusa-core/src/pre/: mod.rs  resolution.rs
crates/focusa-core/src/reference/: artifact.rs  gc.rs  mod.rs  store.rs
crates/focusa-core/src/replay/: mod.rs
crates/focusa-core/src/rfm/: mod.rs
crates/focusa-core/src/runtime/: daemon.rs  event_bus.rs  events.rs  mod.rs  persistence.rs  persistence_sqlite.rs  persistence_sqlite_test.rs  session.rs
crates/focusa-core/src/skills/: mod.rs
crates/focusa-core/src/sync/: crdt.rs  mod.rs
crates/focusa-core/src/telemetry/: mod.rs
crates/focusa-core/src/threads/: mod.rs
crates/focusa-core/src/training/: mod.rs
crates/focusa-core/src/uxp/: mod.rs
crates/focusa-core/src/workers/: executor.rs  mod.rs  priority_queue.rs  queue.rs
crates/focusa-tui/: Cargo.toml
crates/focusa-tui/src/: api.rs  app.rs  main.rs  theme.rs
crates/focusa-tui/src/views/: autonomy.rs  cache.rs  constitution.rs  contribution.rs  events.rs  focus_stack.rs  focus_state.rs  gate.rs  intuition.rs  lineage.rs  metrics.rs  mod.rs  proposals.rs  references.rs  rfm.rs  skills.rs  telemetry.rs  training.rs  uxp.rs  work_loop.rs
docs/: 00-glossary.md  01-architecture-overview.md  02-runtime-daemon.md  03-focus-stack.md  04-focus-gate.md  05-intuition-engine.md  06-focus-state.md  07-reference-store.md  08-expression-engine.md  09-proxy-adapter.md  10-monorepo-layout.md  11-menubar-ui-spec.md  12-autonomy-scoring.md  13-autonomy-ui.md  14-uxp-ufi-schema.md  15-agent-schema.md  16-agent-constitution.md  16-constitution-synthesizer.md  17-context-lineage-tree.md  18-cache-permission-matrix.md  19-intentional-cache-busting.md  27-tui-spec.md  (+146 more)
(+602 files in other folders)
