[workspace]
resolver = "2"
members = [
    "crates/focusa-core",
    "crates/focusa-cli",
    "crates/focusa-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Startempire-Wire/focusa"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP API
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing (ECS content addressing)
sha2 = "0.10"
hex = "0.4"

# HTTP client (CLI → API)
reqwest = { version = "0.12", features = ["json"] }

# Internal crates
focusa-core = { path = "crates/focusa-core" }
