[package]
name = "focusa-api"
description = "Focusa daemon — long-lived process hosting cognitive state and local HTTP API"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "focusa-daemon"
path = "src/main.rs"

[dependencies]
focusa-core = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
reqwest = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
